--- a/index.html
+++ b/index.html
@@ -18,32 +18,37 @@
         <nav class="browser">
             <li class="list">
                 <button class="boton" name="Fiverr" onclick="ClickLink(name)">
-                    <div class="link" name="Fiverr" href=""></div><label class="textlinks">Fiverr</label>
+                    <div class="link" name="Fiverr"></div><label class="textlinks">Fiverr</label>
                 </button>
             </li>
             <li class="list">
                 <button class="boton" name="Github" onclick="ClickLink(name)">
-                    <div class="link" name="Github" href=""></div><label class="textlinks">Github</label>
+                    <div class="link" name="Github"></div><label class="textlinks">Github</label>
                 </button>
             </li>
             <li class="list">
                 <button class="boton" name="Instagram" onclick="ClickLink(name)">
-                    <div class="link" name="Instagram" href=""></div><label class="textlinks">Instagram</label>
+                    <div class="link" name="Instagram"></div><label class="textlinks">Instagram</label>
                 </button>
             </li>
             <li class="list">
                 <button class="boton" name="Linkedin" onclick="ClickLink(name)">
-                    <div class="link" name="Linkedin" href=""></div><label class="textlinks">Linkedin</label>
+                    <div class="link" name="Linkedin"></div><label class="textlinks">Linkedin</label>
                 </button>
             </li>
             <li class="list">
                 <button class="boton" name="Portafolio" onclick="ClickLink(name)">
-                    <div class="link" name="Portafolio" href=""></div><label class="textlinks">Portafolio</label>
+                    <div class="link" name="Portafolio"></div><label class="textlinks">Portafolio</label>
                 </button>
             </li>
             <li class="list">
                 <button class="boton" name="Twitch" onclick="ClickLink(name)">
-                    <div class="link" name="Twitch" href=""></div><label class="textlinks">Twitch</label>
+                    <div class="link" name="Twitch"></div><label class="textlinks">Twitch</label>
+                </button>
+            </li>
+            <li class="list">
+                <button class="boton" name="Discord" onclick="ClickLink(name)">
+                    <div class="link" name="Discord"></div><label class="textlinks">Discord</label>
                 </button>
             </li>
         </nav>
