--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                     <div class="link" name="Discord"></div><label class="textlinks">Discord</label>
                 </button>
             </li>
+            <li class="list">
+                <button class="boton" name="Youtube" onclick="ClickLink(name)">
+                    <div class="link" name="Youtube"></div><label class="textlinks">Youtube</label>
+                </button>
+            </li>
         </nav>
         <script src="./app.js"></script>
     </main>
